Fix spacing in create pool form view (mobile)

--- a/django/static/necroporra/css/styles.css
+++ b/django/static/necroporra/css/styles.css
@@ -21616,9 +21616,9 @@ has-background-danger.is-hoverable:active {
   --bulma-warning-dark-l: 30%;
   --bulma-warning-soft-l: 15%;
   --bulma-warning-bold-l: 64%;
-  --bulma-danger-h: 350;
-  --bulma-danger-s: 76%;
-  --bulma-danger-l: 36%;
+  --bulma-danger-h: 356;
+  --bulma-danger-s: 85%;
+  --bulma-danger-l: 46%;
   --bulma-danger-invert-l: 95%;
   --bulma-danger-light-l: 13%;
   --bulma-danger-dark-l: 26%;
@@ -22146,6 +22146,9 @@ main {
 }
 
 @media screen and (max-width: 768px) {
+  .create-pool-inline-stepper-field {
+    margin-bottom: 1.5rem !important;
+  }
   .number-stepper {
     max-width: 11rem;
   }
@@ -22162,7 +22165,10 @@ main {
     align-items: center;
     justify-content: center;
     text-align: center;
-    gap: 0.5rem;
+    gap: 0.25rem;
+  }
+  .create-pool-inline-stepper .field:not(:last-child) {
+    margin-bottom: 0;
   }
   .create-pool-inline-stepper .number-stepper {
     max-width: none;
